--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@
 	 z-index: 2000;
 	 width: 100%;
 	 top: 6px;
+	 left:1rem;
+	 
 direction:rtl;
 }
 
@@ -39,9 +41,9 @@ direction:rtl;
 
 
  .content {
-	    right: 52px;
+	    right: 84px;
     left: 94px;
-    top: -47px;
+    top: 6rem;
     position: absolute;
     padding-bottom: 0px;
     direction: rtl;
@@ -136,6 +138,8 @@ direction:rtl;
 	 -o-transition: all 0.3s ease-in-out;
 	 transition: all 0.3s ease-in-out;
     text-decoration: none;
+	 width :6rem;
+	 text-align :center;
 }
 li{padding:11px;
 }
