--- a/index.html
+++ b/index.html
@@ -23,8 +23,6 @@
 	 z-index: 2000;
 	 width: 100%;
 	 top: 6px;
-	 left:1rem;
-	 
 direction:rtl;
 }
 
@@ -41,9 +39,9 @@ direction:rtl;
 
 
  .content {
-	    right: 84px;
+	    right: 52px;
     left: 94px;
-    top: 6rem;
+    top: -47px;
     position: absolute;
     padding-bottom: 0px;
     direction: rtl;
@@ -138,8 +136,8 @@ direction:rtl;
 	 -o-transition: all 0.3s ease-in-out;
 	 transition: all 0.3s ease-in-out;
     text-decoration: none;
-	 width :6rem;
-	 text-align :center;
+	 width:86px;
+	 text-align:center
 }
 li{padding:11px;
 }
