--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@ direction:rtl;
 	 transition: all 0.3s ease-in-out;
     text-decoration: none;
 	 width:86px;
-	 text-align:center
+	 text-align:center;
 }
 li{padding:11px;
 }
